--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/AllForKids.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jfoenix-8.0.1.jar=C:\\Users\\Narjes\\Documents\\jfoenix-8.0.1.jar
+file.reference.stripe-java-5.34.1.jar=C:\\Users\\Narjes\\Documents\\stripe-java-5.34.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.stripe-java-5.34.1.jar}:\
+    ${file.reference.jfoenix-8.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
